Add WebInputException subclasses
Closes gh-28142